# MNEM

./: .gitignore  Cargo.toml  Plan.md  Readme.md
.cargo/: config.toml
entity/: Cargo.toml  README.md
entity/src/: lib.rs  main.rs
entity/src/effect/: displacement.rs  mod.rs
entity/src/svg/: loader.rs  mod.rs  render.rs
interface/: Cargo.toml  README.md
interface/src/: hal.rs  image.rs  lib.rs  main.rs
interface/src/display/: mod.rs
interface/src/display/ili9341/: cmd.rs  mod.rs
interface/src/display/ssd1306/: cmd.rs  constants.rs  mod.rs
types/: Cargo.toml
types/src/: lib.rs
