[package]
name = "interface"
version = "0.1.0"
edition = "2024"

[dependencies]
types = { path = "../types" }
rppal = "0.22.1"
ili9341 = "0.6.0"
display-interface = "0.5"
display-interface-spi = "0.5"
embedded-hal = "1.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "bmp"] }
